--- a/src/index.css
+++ b/src/index.css
@@ -13,6 +13,12 @@
   -moz-osx-font-smoothing: grayscale;
 }
 
+body {
+  min-width: 300px;
+  width: 100vw;
+  height: 100vh;
+}
+
 @media (prefers-color-scheme: light) {
   :root {
     color: #213547;
