--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,21 @@
 :root {
-  text-align: center;
+  padding: 0rem 25rem;
+}
+
+.header {
+  display: flex;
+  flex-direction: row;
+  flex-wrap: wrap;
+  align-items: baseline;
+  justify-content: left;
+}
+
+.header > h1 {
+  margin-right: 1rem;
+}
+
+.content {
+  padding: 0rem 2rem;
+  border-left: 0.1rem solid gray;
+  border-radius: 0.25rem;
 }
