--- a/src/App.css
+++ b/src/App.css
@@ -3,7 +3,7 @@
 }
 
 .content {
-  padding: 0rem 30rem;
+  padding: 0rem 35rem;
 }
 
 @media (width < 1000px) {
@@ -12,14 +12,20 @@
   }
 }
 
-@media (100px <= width < 1280px) {
+@media (100px <= width < 800px) {
   .content {
     padding: 0rem 5rem;
   }
 }
 
+@media (800px <= width < 1280px) {
+  .content {
+    padding: 0rem 10rem;
+  }
+}
+
 @media (1280px <= width < 1600px) {
   .content {
-    padding: 0rem 15rem;
+    padding: 0rem 25rem;
   }
 }
